// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StraightElement renders with default values 1`] = `
<body>
  <div>
    <path
      d="M 0,0 H 1 V 1 H 0 Z"
    />
  </div>
</body>
`;

exports[`StraightElement renders with the given parameters 1`] = `
<body>
  <div>
    <path
      d="M 100,150 H 180 V 250 H 100 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`StraightElement updates when the parameter d is modified 1`] = `
<body>
  <div>
    <path
      d="M 90,140 H 190 V 260 H 90 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`StraightElement updates when the parameter fill is modified 1`] = `
<body>
  <div>
    <path
      d="M 100,150 H 180 V 250 H 100 Z"
      fill="blue"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`StraightElement updates when the parameter height is modified 1`] = `
<body>
  <div>
    <path
      d="M 100,150 H 180 V 190 H 100 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`StraightElement updates when the parameter stroke is modified 1`] = `
<body>
  <div>
    <path
      d="M 100,150 H 180 V 250 H 100 Z"
      fill="red"
      stroke="blue"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`StraightElement updates when the parameter stroke-width is modified 1`] = `
<body>
  <div>
    <path
      d="M 100,150 H 180 V 250 H 100 Z"
      fill="red"
      stroke-width="3"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`StraightElement updates when the parameter transform is modified 1`] = `
<body>
  <div>
    <path
      d="M 100,150 H 180 V 250 H 100 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(180)"
    />
  </div>
</body>
`;

exports[`StraightElement updates when the parameter width is modified 1`] = `
<body>
  <div>
    <path
      d="M 100,150 H 140 V 250 H 100 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`StraightElement updates when the parameter x is modified 1`] = `
<body>
  <div>
    <path
      d="M 40,150 H 120 V 250 H 40 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`StraightElement updates when the parameter y is modified 1`] = `
<body>
  <div>
    <path
      d="M 100,40 H 180 V 140 H 100 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;
